src/test/ui/never_type/call-fn-never-arg-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/call-fn-never-arg-wrong-type.rs:10:9
   |
LL |     foo("wow");
   |         ^^^^^ expected `!`, found `&str`
   |
   = note:   expected type `!`
           found reference `&'static str`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0308`.
